--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.4.32'
     repositories {
         google()
         jcenter()
         
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //testImplementation 'junit:junit:4.12'
+        //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+        //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
